Code block and table block overflow fixed

--- a/src/styles.css
+++ b/src/styles.css
@@ -18,7 +18,9 @@ body {
   background-color: var(--markdown-code-bg) !important;
   color:var(--markdown-code);
   scrollbar-color: var(--primary) transparent;
-  padding: 4px 10px !important;
+  padding: 2px 5px 4px 5px !important;
+  max-width: 100%;
+  margin: 0px 1px !important;
 }
 
 .markdown-preview ul {
@@ -28,7 +30,7 @@ body {
 
 .markdown-preview pre {
   background-color: var(--markdown-code-bg) !important;
-  padding: 0.5rem;
+  padding: 0.5rem !important;
 }
 
 .wmde-markdown hr {
@@ -39,6 +41,8 @@ body {
 
 .markdown-preview {
   font-size: 0.65rem !important;
+  max-width: 100% !important;
+  overflow-x: auto !important;
 
   @media (min-width: 450px) {
     font-size: 0.7rem !important;
